istio/kiali-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 9100
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: istio-route
  namespace: istio-system
spec:
  parentRefs:
    - name: kiali-gateway
      namespace: istio-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/kiali"
      backendRefs:
        - name: kiali
          port: 20001
